# gexif

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gexif.desktop
.github/workflows/: ci.yml
gexif/: Makefile.am  gexif-main.c  gexif-main.h  gexif-thumbnail.c  gexif-thumbnail.h  gexif.c
icons/: Makefile.am
icons/scalable/: gexif.svgz
libjpeg/: Makefile.am  jpeg-data.c  jpeg-data.h  jpeg-marker.c  jpeg-marker.h
m4/: Makefile.am  gp-check-libexif.m4
m4m/: Makefile.am
po/: .gitignore  ChangeLog  Makevars.template  POTFILES.in  de.po  es.po  fr.po  ka.po  pl.po  sv.po
