AC_INIT(gexif/gexif.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gexif, 0.2)
AM_MAINTAINER_MODE

AM_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
dnl ALL_LINGUAS=""
dnl AM_GNU_GETTEXT

dnl ---------------------------------------------------------------------------
dnl libexif
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(LIBEXIF, libexif)
AC_SUBST(LIBEXIF_LIBS)
AC_SUBST(LIBEXIF_CFLAGS)

dnl ---------------------------------------------------------------------------
dnl libexif-gtk
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GEXIF, libexif-gtk)
AC_SUBST(GEXIF_LIBS)
AC_SUBST(GEXIF_CFLAGS)

dnl ---------------------------------------------------------------------------
dnl gdk-pixbuf support?
dnl ---------------------------------------------------------------------------
have_gdk_pixbuf=false
try_gdk_pixbuf=true
gtk_gdk_pixbuf=no
AC_ARG_WITH(gdk-pixbuf, [  --without-gdk-pixbuf       Don't use gdk-pixbuf],
        if test x$withval = xno; then
                try_gdk_pixbuf=false
        fi
)
if $try_gdk_pixbuf; then
        AC_PATH_PROG(GDK_PIXBUF_CONFIG,gdk-pixbuf-config)
        if test -n "$GDK_PIXBUF_CONFIG" ; then
                have_gdk_pixbuf=true
                gdk_pixbuf_msg=yes
                GDK_PIXBUF_CFLAGS=`$GDK_PIXBUF_CONFIG --cflags`
                GDK_PIXBUF_LIBS=`$GDK_PIXBUF_CONFIG --libs`
                AC_DEFINE(HAVE_GDK_PIXBUF)
        fi
fi
AC_SUBST(GDK_PIXBUF_CFLAGS)
AC_SUBST(GDK_PIXBUF_LIBS)
AM_CONDITIONAL(HAVE_GDK_PIXBUF, $have_gdk_pixbuf)

CFLAGS="$CFLAGS -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Werror"
AC_SUBST(CFLAGS)

AC_OUTPUT([
  Makefile
  libjpeg/Makefile
  gexif/Makefile
])
