AC_PREREQ(2.50)
AC_INIT(gexif/gexif.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gexif, 0.4)
AM_MAINTAINER_MODE

AM_PROG_LIBTOOL

dnl ---------------------------------------------------------------------------
dnl i18n support
dnl ---------------------------------------------------------------------------
ALL_LINGUAS="de"
AM_GNU_GETTEXT

dnl ---------------------------------------------------------------------------
dnl libexif
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(LIBEXIF, libexif)
AC_SUBST(LIBEXIF_LIBS)
AC_SUBST(LIBEXIF_CFLAGS)

dnl ---------------------------------------------------------------------------
dnl libexif-gtk
dnl ---------------------------------------------------------------------------
PKG_CHECK_MODULES(GEXIF, gtk+-2.0 libexif-gtk >= 0.2.0)
AC_SUBST(GEXIF_LIBS)
AC_SUBST(GEXIF_CFLAGS)

CFLAGS="$CFLAGS -Wall -Wchar-subscripts -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wpointer-arith -Werror"
AC_SUBST(CFLAGS)

AC_OUTPUT([
  Makefile
  libjpeg/Makefile
  gexif/Makefile
  intl/Makefile
  po/Makefile.in
])
